--- a/geoip-target-redirect.html
+++ b/geoip-target-redirect.html
@@ -28,8 +28,8 @@
         var target = []; // Create a new target Array.
 
         // Example Codes:
-        target.All = "http://domain.com/"; // Redirects Non-targeted / all other visitors to this URL.
-        target.US  = "http://domain.us/";  // Redirects US Visitors to this URL.
+        target.All = "http://google.com/"; // Redirects Non-targeted / all other visitors to this URL.
+        target.ID  = "http://google.com/";  // Redirects US Visitors to this URL.
         target.GB  = "http://domain.uk/";  // Redirects UK Visitors to this URL.
         target.CA  = "http://domain.ca/";  // Redirects Canadian Visitors to this URL.
 
