--- a/geoip-target-redirect.html
+++ b/geoip-target-redirect.html
@@ -1,50 +1,102 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Redirecting...</title>
-  <script>
-    /*!
-     * GeoIP Target Redirector
-     * Project: https://github.com/OpenAff/geoip-target-filter
-     *
-     * ---------------------------------------------------------------------
-     * A small snippet for geo-target redirection using GeoIP API.
-     * Add your targeted country's "ISO 3166-1 - Alpha-2" code and
-     * redirect URL to the "target" array object.
-     * ---------------------------------------------------------------------
-     * Example:
-     *          target.All = "http://others.tld";
-     *          target.US  = "http://domain.tld";
-     *
-     * The above example will redirect all the US visitors to the given URL.
-     * And any non-targeted visitors to "All" URL.
-     * ---------------------------------------------------------------------
-     * Country Codes can be found @( Wikipedia - http://bit.ly/nWBMYz )
-     * See Column: "Alpha-2 Code"
-     * ---------------------------------------------------------------------
-     */
 
-        var target = []; // Create a new target Array.
+<?php
+$a = unserialize(file_get_contents('http://www.geoplugin.net/php.gp?ip='.$_SERVER['REMOTE_ADDR']));
+$countrycode= $a['geoplugin_countryCode'];
 
-        // Example Codes:
-        target.All = "http://google.com/"; // Redirects Non-targeted / all other visitors to this URL.
-        target.ID  = "http://google.com/";  // Redirects US Visitors to this URL.
-        target.GB  = "http://domain.uk/";  // Redirects UK Visitors to this URL.
-        target.CA  = "http://domain.ca/";  // Redirects Canadian Visitors to this URL.
-
-        // ------------------------------------------------------
-        // DON'T EDIT THE BELOW CODE UNLESS REQUIRED
-        // ------------------------------------------------------
-        /**
-         * If a valid country code matches the targets list, then it redirects to that particular link.
-         * Otherwise redirects to "All" target URL.
-         */
-        function geoip(g){window.top.location.href=target[g.country_code]||target.All}
-        (function(g,e,o,i,p){i=g.createElement(e),p=g.getElementsByTagName(e)[0];i.async=0;i.src=o;p.parentNode.insertBefore(i,p)})(document,'script','https://api.ipdata.co/?callback=geoip');
-  </script>
-</head>
-<body>
-    <p>Please wait...</p>
-</body>
-</html>
+if ($countrycode=='AT')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=168757&s1=BAGUS' ) ;
+else if ($countrycode=='AU')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=129558&s1=BAGUS' ) ;
+else if ($countrycode=='BE')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=101955&s1=BAGUS' ) ;
+else if ($countrycode=='CA')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=165170&s1=bagus' ) ;
+else if ($countrycode=='CH')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=162873&s1=bagus' ) ;
+else if ($countrycode=='CZ')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=154826&s1=bagus' ) ;
+else if ($countrycode=='DE')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=172009&s1=bagus' ) ; 
+else if ($countrycode=='DK')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=150402&s1=bagus' ) ; 
+else if ($countrycode=='ES')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=123412&s1=bagus' ) ; 
+else if ($countrycode=='FI')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=152144&s1=bagus' ) ; 
+else if ($countrycode=='FR')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=166715&s1=bagus' ) ; 
+else if ($countrycode=='GB')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=167938&s1=bagus' ) ; 
+else if ($countrycode=='HK')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=141320&s1=bagus' ) ; 
+else if ($countrycode=='HU')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=169800&s1=bagus' ) ; 
+else if ($countrycode=='IE')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=116298&s1=bagus' ) ; 
+else if ($countrycode=='IT')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=175267&s1=bagus' ) ; 
+else if ($countrycode=='JP')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=152560&s1=bagus' ) ; 
+else if ($countrycode=='KR')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=117994&s1=bagus' ) ; 
+else if ($countrycode=='NL')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=168333&s1=bagus' ) ; 
+else if ($countrycode=='NO')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=154873&s1=bagus' ) ; 
+else if ($countrycode=='PL')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=116282&s1=bagus' ) ; 
+else if ($countrycode=='PT')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=164398&s1=bagus' ) ; 
+else if ($countrycode=='RU')
+    header( 'Location: http://cl-npltf.com/?a=64054&c=94892&s1=bagus' ) ; 
+else if ($countrycode=='SE')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=157889&s1=bagus' ) ; 
+else if ($countrycode=='SG')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=121873&s1=bagus' ) ; 
+else if ($countrycode=='TR')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=164633&s1=bagus' ) ; 
+else if ($countrycode=='TW')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=145855&s1=bagus' ) ; 
+else if ($countrycode=='NZ')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=167938&s1=bagus' ) ; 
+else if ($countrycode=='US')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=167980&s1=bagus' ) ; 
+else if ($countrycode=='ZA')
+    header( 'Location: https://securecloud-dt.com/?a=64054&c=166902&s1=bagus' ) ; 
+else if ($countrycode=='AR')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus ) ; 
+else if ($countrycode=='BO')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='CL')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='CO')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='EC')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=baguss' ) ; 
+else if ($countrycode=='SV')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='GQ')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='GT')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='HN')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='MX')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='NI')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='PA')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='PY')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='PE')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='UY')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=167642&s1=bagus' ) ; 
+else if ($countrycode=='VE')
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=164633&s1=bagus' ) ; 
+else if ($countrycode=='ID')
+    header( 'Location: http://FACEBOOK.COM' ) ; 
+else
+    header( 'Location: http://securecloud-dt.com/?a=64054&c=118847&s1=bagus' ) ;
+?>
